<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:src="@drawable/wp" />
        </FrameLayout>

    </LinearLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/lord"
        android:layout_width="131dp"
        android:layout_height="140dp"
        android:layout_marginStart="155dp"
        android:layout_marginTop="320dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/iip"
        android:padding="-2dp" />

    <TextView
        android:id="@+id/tv_item_about"
        android:layout_width="match_parent"
        android:layout_height="334dp"
        android:layout_marginTop="470dp"
        android:text="@string/about"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:layout_marginStart="43dp"
        android:layout_marginTop="513dp"
        android:text="@string/saya"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold" />
    <TextView
        android:layout_width="320dp"
        android:layout_height="500dp"
        android:padding="20dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="540dp"
        android:text="@string/email"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold" />


</RelativeLayout>