<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/tv_item_photo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:src="@drawable/dicoding" />

        </FrameLayout>

        <TextView
            android:id="@+id/tv_item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal ="true"
            android:text="Nama Rumah Sakit"
            android:textSize="40dp"
            android:padding="2dp"
            android:elevation="20dp"
            android:background="@drawable/shadow"
            android:textAlignment="center"
            android:layout_marginTop="15dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/descripsion"
            android:textAlignment="viewStart"
            android:textColor="@android:color/black"
            android:textSize="32sp" />
        <TextView
            android:id="@+id/tv_item_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/detail"
            android:textSize="20dp"
            android:textAlignment="viewStart"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:lineSpacingMultiplier="1"
            android:text="@string/fasilitas"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="32dp" />

        <RelativeLayout
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:elevation="16dp"
            android:padding="20dp"
            android:background="@drawable/shadow">

            <ImageView
                android:id="@+id/tv_item_photo_lab"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginLeft="20dp"
                android:src="@drawable/dicoding" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="130dp"
                android:textAlignment="center"
                android:textSize="20dp"
                android:text="@string/lab" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:elevation="16dp"
            android:padding="20dp"
            android:background="@drawable/shadow">

            <ImageView
                android:id="@+id/tv_item_photo_room"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginLeft="20dp"
                android:src="@drawable/dicoding" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="120dp"
                android:text="@string/room"
                android:textAlignment="center"
                android:textSize="20dp" />
        </RelativeLayout>

        <RelativeLayout android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:elevation="16dp"
            android:padding="20dp"
            android:background="@drawable/shadow">

            <ImageView
            android:id="@+id/tv_item_photo_igd"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginLeft="20dp"
            android:src="@drawable/dicoding" />

            <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="120dp"
            android:textAlignment="center"
            android:textSize="20dp"
            android:text="@string/igd" />

         </RelativeLayout>
    </LinearLayout>


</ScrollView>